--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=572d4a4191fe3379e537",
+    "/css/app.css": "/css/app.css?id=ba8b76ede5275a7fb12b"
 }
